Massenoperation : format source